--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,10 +14,24 @@ html{
 }
 
 #board {
-    border: 4px solid #1fd8ff;
+    border: 5px solid #1fd8ff;
     border-radius: 10px;
     box-shadow: 1px 1px 20px 4px rgb(0 205 252);
+    animation:  glow 5s infinite;
 }
+
+@keyframes glow {
+    0% {
+        box-shadow: 1px 1px 20px 4px rgb(0 205 252);
+    }
+    50% {
+        box-shadow: 1px 1px 40px 10px rgb(59 237 255);
+    }
+    100% {
+        box-shadow: 1px 1px 20px 4px rgb(0 205 252);
+    }
+}
+
 
 .swal-text, .swal-title{
     color:white;
@@ -180,4 +194,20 @@ body {
     font-size: var(--fs);
     font-weight: 800;
     letter-spacing: var(--ls);
+  }
+
+  .blink-ani{
+    animation: blink 1s infinite;
+  }
+
+  @keyframes blink {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
