--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@ html{
 #root {
     height: 100vh;
     width: 100%;
-    --fs: clamp(3rem, 8vw, 7rem);
+    --fs: clamp(2rem, 7vw, 6rem);
     --ls: clamp(-1.75px, -0.25vw, -3.5px);
 }
 
@@ -33,12 +33,8 @@ html{
 }
 
 
-.swal-text, .swal-title{
-    color:white;
-}
-
-.swal-overlay--show-modal .swal-modal{
-    min-height: 350px;
+.hero-img{
+  margin-top: -190px;
 }
 
 body {
@@ -211,3 +207,55 @@ body {
       opacity: 0;
     }
   }
+
+  .title-wrapper {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    transform: skew(0, 352deg);
+  }
+  
+  .sweet-title {
+    order: 2;
+    color: #1dd9ff;
+    font-weight: 900;
+    text-transform: uppercase;
+    font-size: clamp(3rem, 10vw, 6rem);
+    line-height: 0.75em;
+    text-align: center;
+    text-shadow: 3px 1px 1px #4af7ff, 2px 2px 1px #165bfb, 4px 2px 1px #4af7ff,
+      3px 3px 1px #165bfb, 5px 3px 1px #4af7ff, 4px 4px 1px #165bfb,
+      6px 4px 1px #4af7ff, 5px 5px 1px #165bfb, 7px 5px 1px #4af7ff,
+      6px 6px 1px #165bfb, 8px 6px 1px #4af7ff, 7px 7px 1px #165bfb,
+      9px 7px 1px #4af7ff;
+  
+    span {
+      display: block;
+      position: relative;
+  
+      &:before {
+        content: attr(data-text);
+        position: absolute;
+        text-shadow: 2px 2px 1px #4a67e9, -1px -1px 1px #6a36f9,
+          -2px 2px 1px #4a4de9, 1px -1px 1px #4336f9;
+        z-index: 1;
+      }
+  
+      &:nth-child(1) {
+        padding-right: 1rem;
+      }
+  
+      &:nth-child(2) {
+        padding-left: 1rem;
+      }
+    }
+  }
+
+  .game-wrapper {
+    transform: skew(0, 360deg);
+  }
+
+  .game-title {
+    font-size: 23px;
+  }
+  
