--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,10 +66,10 @@ body {
   .stars1 {
     animation: space 40s ease-in-out infinite;
     background-image: 
-      radial-gradient(1px 1px at 25px 5px, white, rgba(255, 255, 255, 0)), 
-      radial-gradient(1px 1px at 50px 25px, white, rgba(255, 255, 255, 0)), 
-      radial-gradient(1.5px 1.5px at 50px 75px, white, rgba(255, 255, 255, 0)), 
-      radial-gradient(2.5px 2.5px at 110px 80px, white, rgba(255, 255, 255, 0));
+      radial-gradient(1px 1px at 25px 5px, rgb(236, 255, 150), rgba(255, 255, 255, 0)), 
+      radial-gradient(1px 1px at 50px 25px, rgb(255, 255, 159), rgba(255, 255, 255, 0)), 
+      radial-gradient(1.5px 1.5px at 50px 75px, rgb(237, 255, 172), rgba(255, 255, 255, 0)), 
+      radial-gradient(2.5px 2.5px at 110px 80px, rgb(244, 255, 189), rgba(255, 255, 255, 0));
   }
   
   .stars2 {
@@ -144,28 +144,30 @@ body {
     transition: all 0.25s ease;
 }
 .kave-btn.active {
-    box-shadow: 1px 1px 8px rgba(0, 214, 252, 0.3);
-    color: rgba(0, 214, 252, 1);
-    text-shadow: 0 0 8px rgba(0, 214, 252, 0.4);
-    font-weight: 800;
+  box-shadow: 1px 1px 8px #FFEB3B;
+  color: #FFEB3B;
+  text-shadow: 0 0 8px #FF9800;
+  font-weight: 800;
+  border: solid 1px #FFEB3B;
 }
+
 .glow{
     color: rgba(0, 214, 252, 1);
     text-shadow: 0 0 20px rgb(9 187 255);
 }
 .kave-btn.active.kave-btn:before {
-    left: 0;
-    width: 20px;
+    left: 20px;
+    width: 40px;
 }
 .kave-btn.active.kave-btn:after {
-    right: 0;
+    right: 20px;
     width: 20px;
 }
 .kave-btn.active .kave-line:before {
     bottom: 0;
 }
 .kave-btn.active .kave-line:after {
-    top: 0;
+    top: 10px;
 }
 .kave-line:before {
     content: "";
@@ -284,10 +286,36 @@ body {
     }
   }
 
+  .sweet-title-green{
+    color : #4aff80;
+    text-shadow: 3px 1px 1px #59ff4a, 2px 2px 1px #16fb5f, 4px 2px 1px #4affb7,
+    3px 3px 1px #165bfb, 5px 3px 1px #4aff71, 4px 4px 1px #16fb48,
+    6px 4px 1px #4af7ff, 5px 5px 1px #165bfb, 7px 5px 1px #4af7ff,
+    6px 6px 1px #165bfb, 8px 6px 1px #4af7ff, 7px 7px 1px #165bfb,
+    9px 7px 1px #4af7ff;
+    span:before {
+      text-shadow: 2px 2px 1px #4aff6b, -1px -1px 1px #36e9f9,
+          -2px 2px 1px #12e296, 1px -1px 1px #36f970;
+    }
+  }
+
   .sweet-title-purple{
     color: #6a36f9;
     text-shadow: 3px 1px 1px #4af7ff, 2px 2px 1px #165bfb, 4px 2px 1px #4af7ff,
     3px 3px 1px #165bfb, 5px 3px 1px #4af7ff, 4px 4px 1px #165bfb,
+    6px 4px 1px #4af7ff, 5px 5px 1px #165bfb, 7px 5px 1px #4af7ff,
+    6px 6px 1px #165bfb, 8px 6px 1px #4af7ff, 7px 7px 1px #165bfb,
+    9px 7px 1px #4af7ff;
+    span:before {
+      text-shadow: 2px 2px 1px #c34aff, -1px -1px 1px #d536f9,
+          -2px 2px 1px #b512e2, 1px -1px 1px #e236f9;
+    }
+  }
+
+  .sweet-title-red{
+    color : #ff4a4a;
+    text-shadow: 3px 1px 1px #ff654a, 2px 2px 1px #fb4416, 4px 2px 1px #ff774a,
+    3px 3px 1px #165bfb, 5px 3px 1px #ff714a, 4px 4px 1px #fb3c16,
     6px 4px 1px #4af7ff, 5px 5px 1px #165bfb, 7px 5px 1px #4af7ff,
     6px 6px 1px #165bfb, 8px 6px 1px #4af7ff, 7px 7px 1px #165bfb,
     9px 7px 1px #4af7ff;
@@ -379,5 +407,18 @@ body {
   }
   100% {
     opacity: 1;
+  }
+}
+
+.splash-in {
+  animation: splash-in 0.6s;
+}
+
+@keyframes splash-in {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
   }
 }
